Fix Mobile Run: Remove Missing Element Reference

--- a/run.html
+++ b/run.html
@@ -248,7 +248,7 @@
             player.jumpCount = 0;
 
             document.getElementById('game-over').style.display = 'none';
-            document.getElementById('tutorial-msg').style.display = 'none';
+            // document.getElementById('tutorial-msg').style.display = 'none'; // Element removed
 
             isRunning = true;
             isPaused = false;
