Final Polish: Fix Touchend Input Focus

--- a/run.html
+++ b/run.html
@@ -1012,7 +1012,7 @@
 
         // TOUCH END (Global)
         document.addEventListener('touchend', (e) => {
-            if (e.target.closest('button')) return;
+            if (e.target.closest('button') || e.target.closest('input')) return;
 
             // if (e.cancelable) e.preventDefault(); // Optional on end
 
